[project]
name = "ghostsurf"
version = "0.1.0"
description = "NTLM relay browser session hijacking tool"
readme = "README.md"
authors = [{ name = "ahos6 (0xNDI)" }]
requires-python = ">=3.11"
dependencies = [
    "impacket>=0.11.0",
    "pyOpenSSL",
    "flask",
]

[project.scripts]
ghostsurf = "ghostsurf.main:main"

[tool.setuptools.packages.find]
include = ["ghostsurf*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]
